--- a/develop/package.json
+++ b/develop/package.json
@@ -1,15 +1,14 @@
 {
   "name": "note-taker",
   "version": "1.0.0",
-  "description": "Module 11 Challenge",
-  "main": "index.js",
+  "description": "",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "^9.2.10",
-    "require": "^2.4.20"
+    "express": "^4.16.4"
   }
 }
